# ChangeLog for app-office/glom
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Dec 2008; <fred@gentoo.org> glom-1.8.4.ebuild:
  Initial Import. Work

  21 Dec 2008; <fred@gentoo.org> glom-1.8.4.ebuild:
  Fix deps to Postgres-8.3

  21 Dec 2008; <fred@gentoo.org> +glom-1.8.4.ebuild:
  Version bump.

  11 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
  Initial Import
