@@ -2,6 +2,6 @@ DIST glom-1.6.17.tar.bz2 1992217 RMD160 e8b8d3e461b735ec2c34b7385afbdd7067203ac9
 DIST glom-1.7.3.tar.bz2 3156543 RMD160 a144e19f5b091c40d4288b38b87e17845f17a4b0 SHA1 0b991da058189cf278dd6aa1a4bfbaa64c1e4bcd SHA256 05bad483b32a580d1284dbdb9fd76aeb4f0e6810ba3ed8ef17b616fdf29dc76b
 DIST glom-1.8.4.tar.bz2 3215518 RMD160 1dee4662b4c6f897fd5fa78552ffb988fef2b65b SHA1 ffcfa6a429e617258526bd6f14fdaece9d1ca19f SHA256 58ed65d32f19a38b91f6b692adc63d14c89bf95c32ce190c053cacc5132612e5
 EBUILD glom-1.6.17.ebuild 817 RMD160 905ad58dd294c4b04e26f10f6dd43bfa017efbeb SHA1 0b09ba60dc68d7e6e9a7cda65c08381800068922 SHA256 0d067d053b8f25d4f5e61e0bc625e0f54144c7358776d547c1a4f252073ee26e
-EBUILD glom-1.7.3.ebuild 854 RMD160 a9541b88acae67d3112e2c0cc1a8825f222107cd SHA1 31f3d841923d279d19ab5765e493d171441f54d1 SHA256 3dd5f0dd1a3d86be44564fdc3ee378b1e62cedc0433c3896ee2f2a62151dafef
-EBUILD glom-1.8.4.ebuild 888 RMD160 a7be373c76f4b24ef351dc216ee137a6cee25004 SHA1 502bf6124a1b2001867b679588e5c913487faa5a SHA256 9fdcacd8c844407d2e7a0cc5aff1368da20a396a21dc88e215a12882af9e145b
-MISC ChangeLog 426 RMD160 b53e588aeff407a46f13a5bfd10aa8d3a60efc7d SHA1 63c30fc065e8f42c49131e7f824503921ef61c1a SHA256 62c30c9418b0013f45c8bd228883d3d433380111e77aac8a124476d10f205111
+EBUILD glom-1.7.3.ebuild 944 RMD160 40b35bf83ddd40f758e09562f4a339e22c394f94 SHA1 32c1358b5349560d8b58f7024505f502786ff57e SHA256 ac50c845061fd3b3e858dd6a70b09c2aae2d97b44083254b74e790033b6342da
+EBUILD glom-1.8.4.ebuild 882 RMD160 761748a8b4fd6a2c6eb167a08f8af5fcf034a73f SHA1 3fd7d05e83efd599108dad1ed8d3e85c2432a567 SHA256 e3114fc90a58a52cdba7c232ebd581b822d62b268a082796e143f38ed150dce5
+MISC ChangeLog 524 RMD160 309a57c0d630fd7adf32bf349c2f6c72156b441f SHA1 7e164586b38a2cedd9163d6519dc1a90aa9f1092 SHA256 562929005f19f814d7607435b12f0143c3137d518e66482991a842e3f6f08aa6
