@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Dec 2008; <fred@gentoo.org> glom-1.7.3.ebuild, glom-1.8.4.ebuild:
+  Add client-only options
+
   21 Dec 2008; <fred@gentoo.org> glom-1.8.4.ebuild:
   Initial Import. Work
 
